--- a/Client/src/components/pages/Home.css
+++ b/Client/src/components/pages/Home.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?q=80&w=2070');
+  background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=1400&h=900&fit=crop');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
